# sagemaker-custom-pytorch-container

./: Dockerfile  README.md  build_and_push.sh  main_mnist.py  pyproject.toml  sagemaker_deploy.py  train
